@@ -3,6 +3,9 @@
 * Added timeout for http operations (#351)
 * Fixed bug when submitting to two different
   hosts with the same user and password.
+* Functorized Audioscrobbler and Radio to 
+  allow to build a version without using
+  ocamlnet..
 
 0.2.0 (12-10-2009)
 =====
